add design for home page

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -15,3 +15,12 @@ $dark: #000;
 
 @import './headerMenu.scss';
 @import './footer.scss';
+@import './h1-hero.scss';
+@import './categories.scss';
+@import './about.scss';
+@import './services_section.scss';
+@import './testimonial.scss';
+@import './count_down.scss';
+@import './team.scss';
+@import './wantTowork.scss';
+@import './blog_page.scss';
