--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -24,3 +24,5 @@ $dark: #000;
 @import './team.scss';
 @import './wantTowork.scss';
 @import './blog_page.scss';
+@import 'vue-slick-carousel/dist/vue-slick-carousel.css';
+@import 'vue-slick-carousel/dist/vue-slick-carousel-theme.css';
