--- a/assets/sass/_testimonial.scss
+++ b/assets/sass/_testimonial.scss
@@ -84,10 +84,9 @@
 		z-index: 2;
 		height: 50px;
 		width: 50px;
-		line-height: 50px;
 		border-radius: 6px;
 		cursor: pointer;
-		font-size: 20px;
+		font-size: 0;
 		@include transition(0.3s);
 
 		color: #616373;
