--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -26,3 +26,4 @@ $dark: #000;
 @import './blog_page.scss';
 @import 'vue-slick-carousel/dist/vue-slick-carousel.css';
 @import 'vue-slick-carousel/dist/vue-slick-carousel-theme.css';
+@import 'node_modules/vue2-animate/src/sass/vue2-animate';
