--- a/assets/sass/_categories.scss
+++ b/assets/sass/_categories.scss
@@ -1,103 +1,100 @@
 .categories-area {
-    background: #f7f7f7;
-    .single-cat{
-        border: 9px solid transparent;
-        padding: 30px 22px;
-        @include transition(.4s);
+	background: #f7f7f7;
+	.single-cat {
+		border: 9px solid transparent;
+		padding: 30px 22px;
+		@include transition(0.4s);
 
-        position: relative;
-        z-index: 1;
-        background: #ffff;
-        @media #{$xs}{
-            padding: 30px 22px;
-        }
-        @media #{$sm}{
-            padding: 30px 18px;
-        }
-        &::before {
-            position: absolute;
-            content: "";
-            width: 100%;
-            height: 0;
-            background:#ff2143;
-           @include transition(.4s);
+		position: relative;
+		z-index: 1;
+		background: #ffff;
+		@media #{$xs} {
+			padding: 30px 22px;
+		}
+		@media #{$sm} {
+			padding: 30px 18px;
+		}
+		&::before {
+			position: absolute;
+			content: '';
+			width: 100%;
+			height: 0;
+			background: #ff2143;
+			@include transition(0.4s);
 
-            bottom: 0;
-            left: 0;
-            z-index: -1;
-            border: 9px solid #fff;
-        }
-        .cat-icon{
-            span{
-                color: #eb566c;
-                font-size: 65px;
-                margin-bottom: 30px;
-                display: block;
-            }
-        }
-        .cat-cap{
-            h5{
-             & > a{
-                font-size: 24px;
-                font-weight: 600;
-                margin-bottom: 21px;
-                display: block;
-                @include transition(.2s);
+			bottom: 0;
+			left: 0;
+			z-index: -1;
+			border: 9px solid #fff;
+		}
+		.cat-icon {
+			svg {
+				color: #eb566c;
+				font-size: 65px;
+				margin: auto;
+				margin-bottom: 30px;
+				display: block;
+			}
+		}
+		.cat-cap {
+			h5 {
+				& > a {
+					font-size: 24px;
+					font-weight: 600;
+					margin-bottom: 21px;
+					display: block;
+					@include transition(0.2s);
 
-                font-family:$font_3;
-                @media #{$sm}{
-                    font-size: 21px;
-                }
-                @media #{$xs}{
-                    font-size: 23px;
-                }
-              }
-            }
-            p{
-                margin-bottom: 36px;
-                color: #57667e;
-                font-size: 16px;
-                @include transition(.2s);
-                @media #{$sm}{
-                    font-size: 15px;
+					font-family: $font_3;
+					@media #{$sm} {
+						font-size: 21px;
+					}
+					@media #{$xs} {
+						font-size: 23px;
+					}
+				}
+			}
+			p {
+				margin-bottom: 36px;
+				color: #57667e;
+				font-size: 16px;
+				@include transition(0.2s);
+				@media #{$sm} {
+					font-size: 15px;
+				}
+			}
+			a {
+				color: #1c165c;
+				font-size: 16px;
+				font-weight: 600;
+				@include transition(0.2s);
+			}
+		}
 
-                }
-            }
-            a{
-                color: #1c165c;
-                font-size: 16px;
-                font-weight: 600;
-                @include transition(.2s);
-            }
-        }
+		// Hover Effect In single
+		&:hover {
+			border: 1px solid transparent;
+			// background: #ff3d1c;
 
-
-        // Hover Effect In single 
-        &:hover{
-                border: 1px solid transparent;
-                // background: #ff3d1c;
-
-                &::before {
-                    height: 100%;
-                }
-                .cat-icon{
-                span{
-                    color: #fff;
-                }
-                }
-                .cat-cap{
-                    h5{
-                        color: #fff;
-                    }
-                    p{
-                        color: #fff;
-                    }
-                    a{
-                        color: #fff;
-                    }
-                }
-       }
-    }
+			&::before {
+				height: 100%;
+			}
+			.cat-icon {
+				svg {
+					color: #fff;
+				}
+			}
+			.cat-cap {
+				h5 {
+					color: #fff;
+				}
+				p {
+					color: #fff;
+				}
+				a {
+					color: #fff;
+				}
+			}
+		}
+	}
 }
-
-
