--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -264,7 +264,7 @@ hr {
 		color: #000 !important;
 		z-index: 1;
 		transition: transform 0.5s;
-		transition-timing-function: ease;
+		transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
 		transform-origin: 0 0;
 		transform: scaleX(0);
 		border-radius: 0;
