--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -24,6 +24,8 @@ $dark: #000;
 @import './team.scss';
 @import './wantTowork.scss';
 @import './blog_page.scss';
+@import './contact.scss';
+
 @import 'vue-slick-carousel/dist/vue-slick-carousel.css';
 @import 'vue-slick-carousel/dist/vue-slick-carousel-theme.css';
 @import 'node_modules/vue2-animate/src/sass/vue2-animate';
