add blog details

--- a/assets/sass/_blog_page.scss
+++ b/assets/sass/_blog_page.scss
@@ -580,7 +580,7 @@
 			color: #999;
 		}
 
-		i,
+		svg,
 		span {
 			font-size: 13px;
 			margin-right: 5px;
@@ -1001,7 +1001,7 @@
 					margin: 0;
 				}
 
-				i,
+				svg,
 				span {
 					font-size: 14px;
 					color: #999;
