add map about page

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -28,4 +28,5 @@ $dark: #000;
 
 @import 'vue-slick-carousel/dist/vue-slick-carousel.css';
 @import 'vue-slick-carousel/dist/vue-slick-carousel-theme.css';
-@import 'node_modules/vue2-animate/src/sass/vue2-animate';
+@import 'vue2-animate/src/sass/vue2-animate';
+@import 'vuelayers/lib/style.css';
