--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -64,6 +64,40 @@
 					}
 				}
 			}
+			.footer-form {
+				margin-bottom: 30px;
+				& form {
+					position: relative;
+					& input {
+						width: 100%;
+						height: 43px;
+						padding: 10px 20px;
+						border: 0;
+						background: #101720;
+						color: #fff;
+						&::placeholder {
+							color: #9fa6bd;
+							font-weight: 300;
+							font-size: 14px;
+						}
+					}
+					& .form-icon {
+						& button {
+							position: absolute;
+							top: 0;
+							right: 0;
+							border: 0;
+							cursor: pointer;
+							padding: 14px 22px;
+							background: #0a0f17;
+							line-height: 1;
+							color: #fff;
+							font-size: 14px;
+							font-weight: 300;
+						}
+					}
+				}
+			}
 			.info.error {
 				color: #f00;
 			}
@@ -83,9 +117,8 @@
 			}
 		}
 	}
-	//copy Right
+
 	.footer-bottom {
-		// border-top: 1px solid #1c2e4c;
 		padding-bottom: 50px;
 		padding-top: 30px;
 		.footer-copy-right {
@@ -107,9 +140,7 @@
 			}
 		}
 	}
-	// Instagram
 
-	// Footer SociaL
 	.footer-social {
 		span {
 			color: #fff;
