--- a/assets/sass/_headerMenu.scss
+++ b/assets/sass/_headerMenu.scss
@@ -229,3 +229,14 @@
 		}
 	}
 }
+
+.switch {
+	margin-left: 35px;
+	background: inherit;
+	color: white;
+
+	option {
+		color: white;
+		background: #0d2d3e;
+	}
+}
