--- a/assets/sass/_about.scss
+++ b/assets/sass/_about.scss
@@ -1,43 +1,48 @@
-.support-company-area{
-    .support-location-img{
-        img{
-            width: 100%;
-        }
+.support-company-area {
+	.support-location-img {
+		img {
+			width: 100%;
+		}
 	}
 	// Right Content
-	.right-caption{
+	.right-caption {
 		position: relative;
 		right: -50px;
-		@media #{$lg}{
+		@media #{$lg} {
 			right: -25px;
 		}
-		@media #{$md}{
+		@media #{$md} {
 			right: 0;
 			margin-bottom: 40px;
 			padding-top: 50px;
 		}
-		@media #{$sm}{
+		@media #{$sm} {
 			right: 0;
 			margin-bottom: 40px;
 			padding-top: 50px;
 		}
-		@media #{$xs}{
+		@media #{$xs} {
 			right: 0;
 			margin-bottom: 40px;
 			padding-top: 50px;
 		}
 
-		.support-caption{
-			p.pera-top{
+		.support-caption {
+			p.pera-top {
 				font-size: 20px;
 				font-weight: 500;
 				color: #fff;
 				font-family: $font_1;
 			}
-			p{
+			p {
 				font-size: 15px;
 				color: #cecece;
 			}
 		}
 	}
+}
+
+.quote {
+	font-size: 3rem;
+	color: #f04e3c;
 }
