--- a/assets/sass/_testimonial.scss
+++ b/assets/sass/_testimonial.scss
@@ -13,6 +13,8 @@
 			padding-left: 0;
 		}
 		.testimonial-top-cap {
+			height: 175px;
+			margin-bottom: 30px;
 			svg {
 				margin-bottom: 50px;
 				width: auto;
