blog newsletter and contact form validation

--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -995,3 +995,7 @@ hr {
 	background-repeat: no-repeat !important;
 	background-position: center center !important;
 }
+
+.input-invalid-message {
+	color: #ff2143;
+}
