--- a/assets/sass/_count_down.scss
+++ b/assets/sass/_count_down.scss
@@ -5,7 +5,7 @@
 		padding: 44px 10px 44px 9px;
 		border: 1px solid #cfcfcf;
 		margin-bottom: 30px;
-		&.active {
+		&:hover {
 			background: #ff2143;
 			box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.05);
 			position: relative;
