--- a/assets/sass/_team.scss
+++ b/assets/sass/_team.scss
@@ -10,12 +10,12 @@
 			}
 		}
 		.team-caption {
-			padding: 20px 20px 20px 50px;
+			padding: 20px 20px;
 			background: #fff;
 			& span {
 				color: #ff2143;
-				font-size: 14px;
-				font-weight: 300;
+				font-size: 16px;
+				font-weight: 400;
 				font-family: $font_1;
 				display: block;
 				position: relative;
