--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -25,6 +25,7 @@ $dark: #000;
 @import './wantTowork.scss';
 @import './blog_page.scss';
 @import './contact.scss';
+@import './slicknav.scss';
 
 @import 'vue-slick-carousel/dist/vue-slick-carousel.css';
 @import 'vue-slick-carousel/dist/vue-slick-carousel-theme.css';
