--- a/assets/sass/_categories.scss
+++ b/assets/sass/_categories.scss
@@ -7,6 +7,7 @@
 
 		position: relative;
 		z-index: 1;
+		height: 100%;
 		background: #ffff;
 		@media #{$xs} {
 			padding: 30px 22px;
@@ -25,7 +26,7 @@
 			bottom: 0;
 			left: 0;
 			z-index: -1;
-			border: 9px solid #fff;
+			border: 8px solid #fff;
 		}
 		.cat-icon {
 			svg {
