decrease bundle size and move i18n switcher

--- a/assets/sass/_headerMenu.scss
+++ b/assets/sass/_headerMenu.scss
@@ -242,12 +242,15 @@
 }
 
 .switch {
-	margin-left: 35px;
 	background: inherit;
-	color: white;
+	color: #0d2d3e;
 
 	option {
-		color: white;
-		background: #0d2d3e;
+		color: #0d2d3e;
+		background: white;
+	}
+
+	&:focus {
+		outline: 0;
 	}
 }
