--- a/assets/sass/_blog_page.scss
+++ b/assets/sass/_blog_page.scss
@@ -83,439 +83,9 @@
 						font-size: 14px;
 					}
 				}
-				.more-btn {
-					color: #ff2143;
-					text-transform: capitalize;
-					font-size: 14px;
-					font-family: $font_1;
-					position: relative;
-					padding-left: 50px;
-					&::before {
-						position: absolute;
-						content: '';
-						width: 35px;
-						height: 2px;
-						left: 0;
-						top: 50%;
-						transform: translateY(-50%);
-						background: #ff2143;
-					}
-				}
 			}
 		}
 	}
-}
-
-.latest-blog-area {
-	.area-heading {
-		margin-bottom: 70px;
-	}
-}
-
-.single-blog {
-	overflow: hidden;
-	margin-bottom: 30px;
-
-	&:hover {
-		box-shadow: 0 10px 20px 0 rgba(42, 34, 123, 0.1);
-		.thumb {
-			&::after {
-				opacity: 0.7;
-				@include transition(0.3s);
-			}
-		}
-	}
-
-	.thumb {
-		overflow: hidden;
-		position: relative;
-
-		&::after {
-			content: '';
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background: #000;
-			opacity: 0;
-			@include transition(0.3s);
-		}
-	}
-
-	h4 {
-		//   @include transition(.3s);
-		border-bottom: 1px solid #dfdfdf;
-		padding-bottom: 34px;
-		margin-bottom: 25px;
-	}
-
-	a {
-		// color: $dip;
-		font-size: 20px;
-		font-weight: 600;
-	}
-
-	.date {
-		color: #666;
-		text-align: left;
-		display: inline-block;
-		font-size: 13px;
-		font-weight: 300;
-	}
-
-	.tag {
-		text-align: left;
-		display: inline-block;
-		float: left;
-		font-size: 13px;
-		font-weight: 300;
-		margin-right: 22px;
-		position: relative;
-
-		&::after {
-			content: '';
-			position: absolute;
-			width: 1px;
-			height: 10px;
-			background: #acacac;
-			right: -12px;
-			top: 7px;
-		}
-
-		@media (max-width: 1199px) {
-			margin-right: 8px;
-
-			&::after {
-				display: none;
-			}
-		}
-	}
-
-	.likes {
-		margin-right: 16px;
-	}
-
-	@media (max-width: 800px) {
-		margin-bottom: 30px;
-	}
-
-	.single-blog-content {
-		padding: 30px;
-
-		.meta-bottom {
-			p {
-				font-size: 13px;
-				font-weight: 300;
-			}
-
-			i {
-				color: $border_color;
-				font-size: 13px;
-				margin-right: 7px;
-			}
-		}
-
-		@media (max-width: 1199px) {
-			padding: 15px;
-		}
-	}
-
-	@media (max-width: 1199px) {
-		h4 {
-			transition: all 300ms linear 0s;
-			border-bottom: 1px solid #dfdfdf;
-			padding-bottom: 14px;
-			margin-bottom: 12px;
-
-			a {
-				font-size: 18px;
-			}
-		}
-	}
-}
-
-.full_image.single-blog {
-	position: relative;
-
-	.single-blog-content {
-		position: absolute;
-		left: 35px;
-		bottom: 0;
-		opacity: 0;
-		visibility: hidden;
-		@include transition(0.3s);
-
-		@media (min-width: 992px) {
-			bottom: 100px;
-		}
-	}
-
-	h4 {
-		@include transition(0.3s);
-
-		border-bottom: none;
-		padding-bottom: 5px;
-	}
-
-	a {
-		font-size: 20px;
-		font-weight: 600;
-	}
-
-	.date {
-		color: #fff;
-	}
-
-	&:hover {
-		.single-blog-content {
-			opacity: 1;
-			visibility: visible;
-			@include transition(0.3s);
-		}
-	}
-}
-
-.l_blog_item {
-	.l_blog_text {
-		.date {
-			margin-top: 24px;
-			margin-bottom: 15px;
-
-			a {
-				font-size: 12px;
-			}
-		}
-
-		h4 {
-			font-size: 18px;
-			border-bottom: 1px solid #eee;
-			margin-bottom: 0;
-			padding-bottom: 20px;
-			@include transition(0.3s);
-		}
-
-		p {
-			margin-bottom: 0;
-			padding-top: 20px;
-		}
-	}
-}
-
-.causes_slider {
-	.owl-dots {
-		text-align: center;
-		margin-top: 80px;
-
-		.owl-dot {
-			height: 14px;
-			width: 14px;
-			background: #eee;
-			display: inline-block;
-			margin-right: 7px;
-
-			&:last-child {
-				margin-right: 0;
-			}
-		}
-	}
-}
-
-.causes_item {
-	background: #fff;
-
-	.causes_img {
-		position: relative;
-
-		.c_parcent {
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-			left: 0;
-			height: 3px;
-			background: rgba(255, 255, 255, 0.5);
-
-			span {
-				width: 70%;
-				height: 3px;
-				position: absolute;
-				left: 0;
-				bottom: 0;
-
-				&::before {
-					content: '75%';
-					position: absolute;
-					right: -10px;
-					bottom: 0;
-					color: #fff;
-					padding: 0 5px;
-				}
-			}
-		}
-	}
-
-	.causes_text {
-		padding: 30px 35px 40px 30px;
-
-		h4 {
-			font-size: 18px;
-			font-weight: 600;
-			margin-bottom: 15px;
-			cursor: pointer;
-		}
-
-		p {
-			font-size: 14px;
-			line-height: 24px;
-			font-weight: 300;
-			margin-bottom: 0;
-		}
-	}
-
-	.causes_bottom {
-		a {
-			width: 50%;
-			border: 1px solid;
-			text-align: center;
-			float: left;
-			line-height: 50px;
-			color: #fff;
-			font-size: 14px;
-			font-weight: 500;
-
-			& + a {
-				border-color: #eee;
-				background: #fff;
-				font-size: 14px;
-			}
-		}
-	}
-}
-
-.latest_blog_area {
-	background: #f9f9ff;
-}
-
-.single-recent-blog-post {
-	margin-bottom: 30px;
-
-	.thumb {
-		overflow: hidden;
-
-		img {
-			transition: all 0.7s linear;
-		}
-	}
-
-	.details {
-		padding-top: 30px;
-
-		.sec_h4 {
-			line-height: 24px;
-			padding: 10px 0 13px;
-			transition: all 0.3s linear;
-		}
-	}
-
-	.date {
-		font-size: 14px;
-		line-height: 24px;
-		font-weight: 400;
-	}
-
-	&:hover {
-		img {
-			transform: scale(1.23) rotate(10deg);
-		}
-	}
-}
-
-.tags {
-	.tag_btn {
-		font-size: 12px;
-		font-weight: 500;
-		line-height: 20px;
-		border: 1px solid #eee;
-		display: inline-block;
-		padding: 1px 18px;
-		text-align: center;
-
-		& + .tag_btn {
-			margin-left: 2px;
-		}
-	}
-}
-
-.blog_categorie_area {
-	padding-top: 30px;
-	padding-bottom: 30px;
-
-	@media (min-width: 900px) {
-		padding-top: 80px;
-		padding-bottom: 80px;
-	}
-
-	@media (min-width: 1100px) {
-		padding-top: 120px;
-		padding-bottom: 120px;
-	}
-}
-
-.categories_post {
-	position: relative;
-	text-align: center;
-	cursor: pointer;
-
-	img {
-		max-width: 100%;
-	}
-
-	.categories_details {
-		position: absolute;
-		top: 20px;
-		left: 20px;
-		right: 20px;
-		bottom: 20px;
-		background: rgba(34, 34, 34, 0.75);
-		color: #fff;
-		transition: all 0.3s linear;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-
-		h5 {
-			margin-bottom: 0;
-			font-size: 18px;
-			line-height: 26px;
-			text-transform: uppercase;
-			color: #fff;
-			position: relative;
-		}
-
-		p {
-			font-weight: 300;
-			font-size: 14px;
-			line-height: 26px;
-			margin-bottom: 0;
-		}
-
-		.border_line {
-			margin: 10px 0;
-			background: #fff;
-			width: 100%;
-			height: 1px;
-		}
-	}
-
-	&:hover {
-		.categories_details {
-			background: rgba(222, 99, 32, 0.85);
-		}
-	}
-}
-
-.blog_item {
-	margin-bottom: 50px;
 }
 
 .blog_details {
@@ -583,49 +153,6 @@
 	}
 }
 
-.blog_item_img {
-	position: relative;
-
-	.blog_item_date {
-		position: absolute;
-		bottom: -10px;
-		left: 10px;
-		display: block;
-		color: $white_color;
-		background-color: $theme-color;
-		padding: 8px 15px;
-		border-radius: 5px;
-
-		@media (min-width: 768px) {
-			bottom: -20px;
-			left: 40px;
-			padding: 13px 30px;
-		}
-
-		h3 {
-			font-size: 22px;
-			font-weight: 600;
-			color: $white_color;
-			margin-bottom: 0;
-			line-height: 1.2;
-
-			@media (min-width: 768px) {
-				font-size: 30px;
-			}
-		}
-
-		p {
-			font-size: 18px;
-			margin-bottom: 0;
-			color: $white_color;
-
-			@media (min-width: 768px) {
-				font-size: 18px;
-			}
-		}
-	}
-}
-
 .blog_right_sidebar {
 	.widget_title {
 		font-size: 20px;
@@ -685,70 +212,6 @@
 				span {
 					font-size: 14px;
 					color: #999;
-				}
-			}
-		}
-	}
-
-	.newsletter_widget {
-		.form-control {
-			height: 50px;
-			border-color: #f0e9ff;
-			font-size: 13px;
-			color: #999;
-			padding-left: 20px;
-			border-radius: 0;
-
-			&::placeholder {
-				color: #999;
-			}
-
-			&:focus {
-				border-color: #f0e9ff;
-				outline: 0;
-				box-shadow: none;
-			}
-		}
-
-		.input-group {
-			button {
-				background: $white_color;
-				border: 1px solid #f0e9ff;
-				padding: 4px 15px;
-				border-left: 0;
-
-				i,
-				span {
-					font-size: 14px;
-					color: #fff;
-				}
-			}
-		}
-	}
-
-	.post_category_widget {
-		.cat-list {
-			li {
-				border-bottom: 1px solid #f0e9ff;
-				transition: all 0.3s ease 0s;
-				padding-bottom: 12px;
-
-				&:last-child {
-					border-bottom: 0;
-				}
-
-				a {
-					font-size: 14px;
-					line-height: 20px;
-					color: #888;
-
-					p {
-						margin-bottom: 0;
-					}
-				}
-
-				& + li {
-					padding-top: 15px;
 				}
 			}
 		}
@@ -817,29 +280,6 @@
 			}
 		}
 	}
-
-	.instagram_feeds {
-		.instagram_row {
-			display: flex;
-			margin-right: -6px;
-			margin-left: -6px;
-
-			li {
-				width: 33.33%;
-				float: left;
-				padding-right: 6px;
-				padding-left: 6px;
-				margin-bottom: 15px;
-			}
-		}
-	}
-
-	.br {
-		width: 100%;
-		height: 1px;
-		background: rgb(238, 238, 238);
-		margin: 30px 0;
-	}
 }
 
 .blog-pagination {
@@ -873,6 +313,7 @@
 
 .blog-pagination .page-item.active {
 	.page-link {
+		z-index: 1;
 		background-color: #fbf9ff;
 		border-color: #f0e9ff;
 		color: #888;
@@ -892,22 +333,6 @@
 		p {
 			margin-bottom: 20px;
 			font-size: 15px;
-		}
-	}
-
-	.social-links {
-		padding-top: 10px;
-
-		li {
-			display: inline-block;
-			margin-bottom: 10px;
-
-			a {
-				color: #ccc;
-				padding: 7px;
-				font-size: 14px;
-				transition: all 0.2s linear;
-			}
 		}
 	}
 
@@ -944,55 +369,12 @@
 		}
 	}
 
-	.thumb {
-		.overlay-bg {
-			background: rgba(#000, 0.8);
-		}
-	}
-
 	.navigation-top {
 		padding-top: 15px;
 		border-top: 1px solid #f0e9ff;
 
 		p {
 			margin-bottom: 0;
-		}
-
-		.like-info {
-			font-size: 14px;
-
-			i,
-			span {
-				font-size: 16px;
-				margin-right: 5px;
-			}
-		}
-
-		.comment-count {
-			font-size: 14px;
-
-			i,
-			span {
-				font-size: 16px;
-				margin-right: 5px;
-			}
-		}
-
-		.social-icons {
-			li {
-				display: inline-block;
-				margin-right: 15px;
-
-				&:last-child {
-					margin: 0;
-				}
-
-				svg,
-				span {
-					font-size: 14px;
-					color: #999;
-				}
-			}
 		}
 	}
 
@@ -1114,12 +496,6 @@
 			}
 		}
 	}
-
-	.sidebar-widgets {
-		@media (max-width: 991px) {
-			padding-bottom: 0;
-		}
-	}
 }
 
 .comments-area {
@@ -1213,7 +589,6 @@
 	}
 
 	h4 {
-		// text-align: center;
 		margin-bottom: 40px;
 		font-size: 18px;
 		line-height: 22px;
