--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -12,13 +12,14 @@ $lg: 'only screen and (min-width: 992px) and (max-width: 1199px)';
 $md: 'only screen and (min-width: 768px) and (max-width: 991px)';
 $sm: 'only screen and (min-width: 576px) and (max-width: 767px)';
 $xs: '(max-width: 575px)';
-// Extra Responsive
 
+// Extra Responsive
 $medium_device: 'only screen and (min-width: 992px) and (max-width: 1200px)';
 $tab_device: 'only screen and (min-width: 768px) and (max-width: 991px)';
 $large_mobile: 'only screen and (min-width: 576px) and (max-width: 767px)';
 $tab: '(max-width: 991px)';
 $tab2: '(max-width: 1199px)';
+$tab3: '(min-width: 1199px)';
 $small_mobile: '(max-width: 576px)';
 $xs_mobile: '(max-width: 420px)';
 $sm_mobile: 'only screen and (min-width: 421px) and (max-width: 575px)';
