--- a/assets/sass/_h1-hero.scss
+++ b/assets/sass/_h1-hero.scss
@@ -1,7 +1,7 @@
 .slider-height {
 	height: 900px;
 	@media #{$lg} {
-		height: 700px;
+		height: 750px;
 	}
 	@media #{$md} {
 		height: 650px;
@@ -10,7 +10,7 @@
 		height: 500px;
 	}
 	@media #{$xs} {
-		height: 500px;
+		height: 350px;
 	}
 }
 
@@ -49,10 +49,15 @@
 }
 
 .slider-area {
-	margin-top: -1px;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
+	.img-fluid {
+		height: 100%;
+		max-width: unset !important;
+		width: auto !important;
+		margin-top: -1px;
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: cover;
+	}
 	.container {
 		overflow: hidden;
 		span {
@@ -101,7 +106,7 @@
 			font-size: 80px;
 			font-weight: 800;
 			margin-bottom: 14px;
-			color: #000;
+			color: #092c3f;
 			font-family: $font_3;
 			line-height: 1.2;
 			@media #{$large1} {
@@ -126,7 +131,7 @@
 		}
 		& p {
 			font-size: 16px;
-			color: #000;
+			color: #092c3f;
 			font-family: $font_1;
 			margin-bottom: 50px;
 			@media #{$xs} {
@@ -254,4 +259,12 @@
 			color: #1b4962;
 		}
 	}
+}
+
+#carousel .carousel-control-prev .carousel-control-prev-icon {
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23092c3f' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+
+#carousel .carousel-control-next .carousel-control-next-icon {
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23092c3f' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
 }
