--- a/assets/sass/_blog_page.scss
+++ b/assets/sass/_blog_page.scss
@@ -26,7 +26,7 @@
 						font-weight: 300;
 						color: #011548;
 						padding: 20px 30px 20px 84px;
-						background: #f7f7f7;
+						background: #eee;
 						@media #{$md} {
 							padding: 20px 10px 20px 20px;
 						}
