--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8,11 +8,14 @@ $dark: #000;
 @import 'bootstrap/scss/variables.scss';
 @import 'bootstrap/scss/vendor/rfs.scss';
 @import 'bootstrap/scss/mixins.scss';
+@import 'bootstrap/scss/root.scss';
 @import 'bootstrap/scss/reboot.scss';
 @import 'bootstrap/scss/type.scss';
 @import 'bootstrap/scss/grid.scss';
 @import 'bootstrap/scss/forms.scss';
+@import 'bootstrap/scss/buttons.scss';
 @import 'bootstrap/scss/input-group.scss';
+@import 'bootstrap/scss/pagination.scss';
 @import 'bootstrap/scss/media.scss';
 @import 'bootstrap/scss/carousel.scss';
 @import 'bootstrap/scss/utilities/display.scss';
