--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -130,6 +130,25 @@
 			&:hover {
 				color: #fff;
 			}
+
+			svg {
+				@include transition(0.4s);
+
+				transform: rotateY(0deg);
+				-webkit-transform: rotateY(0deg);
+				-moz-transform: rotateY(0deg);
+				-ms-transform: rotateY(0deg);
+				-o-transform: rotateY(0deg);
+			}
+			// Hover
+			&:hover svg {
+				color: #ff2143;
+				transform: rotateY(180deg);
+				-webkit-transform: rotateY(180deg);
+				-moz-transform: rotateY(180deg);
+				-ms-transform: rotateY(180deg);
+				-o-transform: rotateY(180deg);
+			}
 		}
 	}
 }
