--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -16,6 +16,7 @@ $dark: #000;
 @import 'bootstrap/scss/pagination.scss';
 @import 'bootstrap/scss/media.scss';
 @import 'bootstrap/scss/carousel.scss';
+@import 'bootstrap/scss/alert.scss';
 @import 'bootstrap/scss/utilities/display.scss';
 @import 'bootstrap/scss/utilities/sizing.scss';
 @import 'bootstrap/scss/utilities/flex.scss';
